Fix overlap for medium width and define size in pixels

--- a/webclient/src/main.scss
+++ b/webclient/src/main.scss
@@ -129,10 +129,17 @@ body {
 
 #tum_logo {
     position: absolute;
-    margin: calc((2rem + 10px + 10px) / 3);
+    margin: 20px;
     right: 0;
     top: 0;
-    height: 34%;
+    height: 20px;
+}
+
+@media (max-width: 1130px) {
+    #tum_logo {
+        position: relative;
+        margin: 10px 10px 0 10px;
+    }
 }
 
 // --- Autocomplete
